style: fix table font sizes on mobile

--- a/styles/pages/_blogTemplate.scss
+++ b/styles/pages/_blogTemplate.scss
@@ -203,7 +203,7 @@
       line-height: 1.7;
 
       @media only screen and (max-width: 600px) {
-        font-size: 0.875rem;
+        font-size: 1rem;
         line-height: 1.5;
       }
     }
